# atcoder-container

./: CLAUDE.md  Dockerfile  Dockerfile.cpp  Dockerfile.lite  Dockerfile.lite-multistage  IMAGE_SIZE_ANALYSIS.md  README.md  build-both.sh
.github/: ARM_RUNNER_SETUP.md  WORKFLOW_GUIDE.md  actionlint.yaml
.github/actions/build-lite/: action.yml
.github/workflows/: build-java.yml  build-latest.yml  build-pr.yml  build-staged.yml  pr-test.yml
cpp/: cpp.sh
elixir/: config.exs  main.ex  mix-lite.exs  mix.exs
java/: java.sh
python/: freeze.txt
rust/: Cargo-lite.toml  Cargo.toml
toml/: .config-clang.toml  config.toml  cpython.toml  elixir-nx.toml  erlang.toml  install-script.toml  installscript.toml  js-node.toml  php.toml  ruby.toml
