[profile.release]
lto = true # コンパイル時間が著しく長くなってしまう場合は無し

[package]
name = "main"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# 202411から:
rpds = "=1.1.1"
rand_xorshift = "=0.4.0"
rand_xoshiro = "=0.7.0"
statrs = "=0.18.0"
primal = "=0.3.3"
thiserror = "=2.0.12"
# 202301から:
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs", rev = "89356739594fa35cb744f374bfb68a2eb27a64ae" }
#ac-library-rs = "=0.1.1"
once_cell = "=1.21.3"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.6.0"
hashbag = "=0.1.12"
pathfinding = "=4.14.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=4.9.0", features = ["c_raw", "rand", "stringly_conversions"] }
amplify_derive = "=4.0.1"
amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
multimap = "=0.10.1"
btreemultimap = "=0.1.1"
bstr = "=1.12.0"
az = "=1.2.1"
gcd = "=2.3.0"
im-rc = "=15.1.0"
fixedbitset = "=0.5.7"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.5.0", features = ["derive"] }
text_io = "=0.1.13"
rustc-hash = "=2.1.1"
smallvec = { version = "=1.15.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }